<resources>
    <string name="app_name">GoVolunteer</string>

    <!-- Strings related to the main_menu -->
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">New User? Register here</string>
    <string name="action_login">Already a user? Login here</string>
    <string name="action_prompt_register">Register</string>
    <string name="go_volunteer_logo">Go Volunteer Logo</string>
    <string name="login_activity_text">LOGIN</string>
    <string name="sign_up_activity_tv">SIGN UP</string>

    <!-- String related to profile -->
    <string name="profile_userid_hint">User ID</string>
    <string name="profile_default_photo">Default profile photo</string>
    <string name="profile_created_spotfix">Spotfix Created</string>
    <string name="profile_zero_hint">0</string>
    <string name="profile_spotfix_attended">Spotfix Attended</string>
    <string name="profile_email_hint">example@exampledomain.com</string>
    <string name="title_activity_main">GoVolunteer</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_name">Name</string>
    <string name="people_required_spotfix_cardview">no_of_required_people</string>
    <string name="cardview_join">JOIN</string>
    <string name="image_spotfix_cardview">spotfixImage</string>
    <string name="spotfix_creation_image">Spotfix Image</string>
    <string name="add_spotfix_image_btn">Add Image</string>
    <string name="no_of_ppl_req">Number of people required</string>
    <string name="spotfix_date">Enter date of spotfix</string>
    <string name="spotfix_time">Enter time of spotfix</string>
    <string name="add_spotfix">Add Spotfix</string>
    <string name="get_directions">Move camera to marker</string>
    <string name="move_camera_to_spotfix_location">Move camera to spotfix location</string>
    <string name="zoomin">zoomin</string>
    <string name="address">Address:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="people_required">People required:</string>
    <string name="participation_count">Participation count:</string>
    <string name="or">OR</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_pwd_instruction">To reset password, enter your email, press the button and follow the instructions mentioned in the email.</string>
    <string name="forgot_pwd_email_hint">Your email here</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for fetching nearby spotfixes. Please enable location services</string>
    <string name="settings">Settings</string>
</resources>
