<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/app_name" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_password"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                android:id="@+id/forgotPwdTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                android:layout_marginLeft="3dp"
                android:clickable="true"
                android:layout_marginStart="3dp"
                android:textColor="@android:color/holo_blue_light"
                android:focusable="true" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/prompt_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="5dp"
                    android:text="@string/action_register"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:clickable="true"
                    android:focusable="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp">

                    <TextView
                        android:id="@+id/divider_text"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:paddingEnd="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/or" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/divider_text"
                        android:layout_toStartOf="@id/divider_text"
                        android:background="@android:color/darker_gray" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/divider_text"
                        android:layout_toRightOf="@id/divider_text"
                        android:background="@android:color/darker_gray" />
                </RelativeLayout>
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google-sign-in-button"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="?android:textAppearanceSmall"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>